[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/ui/white.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/character_selection/CharacterInformation.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/character_selection/CharactersMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/font_42.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/character_selection/CharacterSelectionScene1.gd" type="Script" id=5]

[node name="CharacterSelectionScene1" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
self_modulate = Color( 0.756863, 0.768627, 0.827451, 1 )
scale = Vector2( 120, 67.5 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="CharactersMenu" parent="." instance=ExtResource( 3 )]

[node name="CharacterInformation" parent="." instance=ExtResource( 2 )]
position = Vector2( 877, 140 )
scale = Vector2( 0.85, 0.85 )

[node name="InstructionsLabel" type="Label" parent="."]
margin_left = 900.0
margin_top = 1000.0
margin_right = 1856.0
margin_bottom = 1057.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "W и S = выбор, C = подтвердить, V или Esc = отмена"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="cancelled" from="CharactersMenu" to="." method="_on_CharactersMenu_cancelled"]
[connection signal="finished_selection" from="CharactersMenu" to="." method="_on_CharactersMenu_finished_selection"]
[connection signal="selected" from="CharactersMenu" to="." method="_on_CharactersMenu_selected"]
